Fix Dist::Zilla config

--- a/dist.ini
+++ b/dist.ini
@@ -99,7 +99,7 @@ include = Plack
 
 [@Git]
 allow_dirty = dist.ini
-push_to     = origin main:main
+push_to     = origin master:master
 tag_format  = %v
 commit_msg  = %v%n%n%c
 
