--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,7 @@ exclude_filename = MANIFEST.SKIP
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
+[Signature]
 
 [RecommendedPrereqs]
 [AutoPrereqs]
