--- a/dist.ini
+++ b/dist.ini
@@ -91,7 +91,7 @@ critic_config = t/etc/perlcritic.rc
 [Test::TrailingSpace]
 filename_regex = \.(?:p[lm]|pod)\z
 [Test::Kwalitee]
-skiptest = use_strict
+; skiptest = use_strict
 [Test::ReportPrereqs]
 :version = 0.022
 version_extractor = Module::Metadata
